<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/mainBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/themeWhite">

                <ImageView
                    android:id="@+id/restaurant_detail_picture"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@drawable/borders"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/restaurant_detail_banner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_detail_picture">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/restaurant_detail_name"
                            android:textSize="15sp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/quantum_black_100"
                            tools:text="Le Baron"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/restaurant_detail_rate"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/restaurant_detail_rate"
                            android:theme="@style/RatingBar"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="100dp"
                            android:numStars="3"
                            tools:rating="1"
                            style="?android:attr/ratingBarStyleSmall"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/restaurant_detail_name"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/restaurant_detail_address"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/quantum_black_100"
                        tools:text="@string/infoNoAddress"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/restaurant_detail_button_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_detail_banner_layout">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="?android:attr/buttonBarStyle">

                        <Button
                            android:id="@+id/restaurant_detail_call"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tel"
                            android:drawableTop="@drawable/call_black"
                            android:background="@color/fui_transparent"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/quantum_grey700"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/restaurant_detail_like"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/like"
                            android:drawableTop="@drawable/star_rate_black"
                            android:background="@color/fui_transparent"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/quantum_grey700"
                            style="?android:attr/buttonBarButtonStyle"/>

                        <Button
                            android:id="@+id/restaurant_detail_web"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/site"
                            android:drawableTop="@drawable/public_black"
                            android:background="@color/fui_transparent"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/quantum_grey700"
                            style="?android:attr/buttonBarButtonStyle"/>
                    </TableRow>

                </LinearLayout>

                <View
                    android:id="@+id/restaurant_detail_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/quantum_grey700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_detail_button_box"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_detail_separator">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/restaurant_detail_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restaurant_detail_FAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/goforfood_front_logo"
                    app:backgroundTint="@color/themeWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/goforfood_front_logo"
                    android:tag="JOIN"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_detail_picture"
                    app:layout_constraintEnd_toEndOf="@+id/restaurant_detail_picture"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_picture"
                    tools:targetApi="lollipop" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>